--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.4.0",
     "expo": "^48.0.12",
     "google-map-react": "^2.2.0",
     "metro": "^0.76.3",
