--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "cors": "^2.8.5",
     "expo": "^48.0.12",
     "google-map-react": "^2.2.0",
     "metro": "^0.76.3",
